While tugging on various threads, I saw that we had a number of models in MainFrame. We also made it a singleton and added main frame open/close methods to it. I begun this by trying to mvoe the models out of MainFrame. I saw that the caller of MainFrame, GameRunner, could just as easily create and own the model objects. I started down this road, and MainFrame was eventually left with nothing except very boiler plate JFrame code. At this point I realized that GameRunner could keep track of MainFrame as a regular frame. For now the new variables in GameRunner are mostly static, but there is a path to avoid this.
Also of note, GameRunner is now stateful. The main(String[]) method just calls a new GameRunner.